--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <ul class="header-home">
                     <li id="logohome"><a href="index.html"><img  src="img/logon.png" alt="Logo(Dibujo de helado)" id="logon"></a></li>
                 </ul>
-                <p class="nameic">Heladería vicu</p>
+                <p class="nameic">Heladería Vicu</p>
                 <ul class="header-menu">
                     
                     <li><a href="html/sabores.html">Sabores</a></li>
@@ -36,7 +36,7 @@
                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, voluptates. Sequi minus voluptas numquam corporis iste inventore eveniet illum? Voluptatum omnis reprehenderit hic natus reiciendis cumque asperiores ipsam tempora iusto.</p>
                  </div>
                  <div class="main-img">
-                    <img class="img-m" src="img/helado.png" alt="">
+                    <img class="img-m animacionaparecer"" src="img/helado.png" alt="">
                  </div>
             </div>
        
@@ -48,7 +48,7 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione neque vel necessitatibus, reiciendis corporis quidem quis, odit ut, harum rerum dicta corrupti tenetur aut voluptas officiis quisquam! Atque, non ut.</p>
               </div>
               <div class="main-img">
-                 <img  class="img-m" src="img/helados.jpg" alt="">
+                 <img  class="img-m animacionaparecer"" src="img/helados.jpg" alt="">
               </div>
             </div>
         </main>
