--- a/html/aboutus.html
+++ b/html/aboutus.html
@@ -15,7 +15,7 @@
                 <ul class="header-home">
                     <li id="logohome"><a href="../index.html"><img  src="../img/logon.png" alt="Logo(Dibujo de helado)" id="logon"></a></li>
                 </ul>
-                <p class="nameic">Heladería vicu</p>
+                <p class="nameic">Heladería Vicu</p>
                 <ul class="header-menu">
                     
                   <li><a href="sabores.html">Sabores</a></li>
@@ -37,7 +37,7 @@
                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, voluptates. Sequi minus voluptas numquam corporis iste inventore eveniet illum? Voluptatum omnis reprehenderit hic natus reiciendis cumque asperiores ipsam tempora iusto.</p>
                  </div>
                  <div class="main-img">
-                    <img class="img-m" src="../img/productos1.jpg" alt="">
+                    <img class="img-m animacionaparecer" src="../img/productos1.jpg" alt="">
                  </div>
             </div>
             <div class="main-2">
@@ -48,7 +48,7 @@
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione neque vel necessitatibus, reiciendis corporis quidem quis, odit ut, harum rerum dicta corrupti tenetur aut voluptas officiis quisquam! Atque, non ut.</p>
                   </div>
                   <div class="main-img">
-                     <img  class="img-m" src="../img/productos2.png" alt="">
+                     <img  class="img-m animacionaparecer" src="../img/productos2.png" alt="">
                   </div>
                 </div>
         </main>
